--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,8 +1,10 @@
 @import 'variables';
 
-#content, #sidebar, #drawer {
+#content, #sidebar {
   margin-top: 1rem;
+}
 
+#content, #sidebar, #drawer {
   h1, h2, h3, h4, h5, h6 {
     margin: 0;
     margin-top: $h-margin-top;
