--- a/styles/_table-of-contents.scss
+++ b/styles/_table-of-contents.scss
@@ -9,6 +9,7 @@
     ul {
       list-style: none;
       padding-left: 1em;
+      margin: 0;
       li {
         color: $color-grey !important;
       }
