feat: 🎸 style <hr> in page content (closes #11)

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -71,4 +71,11 @@
       pointer-events: none;
     }
   }
+
+  hr {
+    height: 1px;
+    border: none;
+    border-top: 1px solid $color-grey-light;
+    margin: $base-margin-y 0;
+  }
 }
