--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -12,9 +12,24 @@
     line-height: 1.4em;
     small {
       font-size: 0.6em;
-      color: #aaa;
+      color: $color-grey;
       margin-left: 0.2em;
     }
+  }
+  h2 {
+    font-size: 1.8em;
+  }
+  h3 {
+    font-size: 1.5em;
+  }
+  h4 {
+    font-size: 1.3em;
+  }
+  h5 {
+    font-size: 1.2em;
+  }
+  h6 {
+    font-size: 1em;
   }
 
   h1:first-child {
