feat: 🎸 improve style of header-anchor

--- a/styles/_header-anchor.scss
+++ b/styles/_header-anchor.scss
@@ -4,7 +4,9 @@
   h1, h2, h3, h4, h5, h6 {
     &[id] {
       position: relative;
+      pointer-events: none;
 
+      // for scrolling offset
       &:before {
         content: '';
         display: block;
@@ -12,34 +14,33 @@
         margin-top: -1 * $h-anchor-margin-top;
       }
 
+      // for ability to fire hover event of parent
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1.3em;
+        pointer-events: auto;
+      }
+
       // #
-      & {
+      a.header-anchor {
+        font-size: 0.85em;
+        font-weight: normal;
+        position: absolute;
+        padding-right: 0.3em; // for click-ability
+        left: -0.8em;
+        opacity: 0;
+        pointer-events: auto;
+      }
+      &:hover {
         a.header-anchor {
-          font-size: 0.85em;
-          font-weight: normal;
-          position: absolute;
-          padding-right: 0.3em; // for click-ability
-          left: -0.8em;
-          opacity: 0;
-        }
-        &:hover {
-          a.header-anchor {
-            opacity: 1;
-          }
+          opacity: 1;
         }
       }
     }
-  }
-
-}
-
-// prevent to cannot click under margin of h tags
-.v-app-bar, .v-navigation-drawer--open {
-  z-index: 100 !important;
-}
-#content {
-  a, details {
-    position: relative;
-    z-index: 99;
   }
 }
