--- a/styles/_header-anchor.scss
+++ b/styles/_header-anchor.scss
@@ -22,7 +22,7 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        height: 1.3em;
+        height: calc(100% - #{$h-anchor-margin-top});
         pointer-events: auto;
       }
 
