feat: 🎸 tweak style for mobile

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -31,6 +31,17 @@
   h6 {
     font-size: 1em;
   }
+  @media (max-width: 960px) { // <= md
+    h1 {
+      font-size: 2em;
+    }
+    h2 {
+      font-size: 1.7em;
+    }
+    h3 {
+      font-size: 1.4em;
+    }
+  }
 
   h1:first-child {
     margin-top: 0;
