--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -65,7 +65,7 @@
     padding-left: 1em;
   }
 
-  p > code, a > code, td > code, th > code, li > code {
+  p > code, a > code, td > code, th > code, li > code, strong > code, em > code {
     background-color: $color-grey-light;
     padding: 0.1rem 0.2rem;
     margin: 0;
