--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -75,10 +75,17 @@
 
   table {
     width: 100%;
+    display: block;
+    overflow: scroll;
     border-collapse: collapse;
     td, th {
       border: 1px solid $color-grey-light;
       padding: 0.5em 1em;
+    }
+    @media (max-width: 960px) { // <= md
+      & {
+        word-break: keep-all;
+      }
     }
   }
 
