--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -65,12 +65,14 @@
     padding-left: 1em;
   }
 
-  p > code, a > code, td > code, th > code, li > code, strong > code, em > code {
-    background-color: $color-grey-light;
-    padding: 0.1rem 0.2rem;
-    margin: 0;
-    font-size: 0.85em;
-    font-family: $font-family-monospace;
+  h1, h2, h3, h4, h5, h6, p, a, td, th, li, strong, em {
+    > code {
+      background-color: $color-grey-light;
+      padding: 0.1rem 0.2rem;
+      margin: 0;
+      font-size: 0.85em;
+      font-family: $font-family-monospace;
+    }
   }
 
   table {
