feat: 🎸 improve mobile accessibility

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -23,7 +23,7 @@ $custom-block-padding-x: 1.3rem !default;
 $custom-block-padding-y: 1rem !default;
 
 $code-font-size: 0.9rem !default;
-$code-font-size-mobile: 0.85em !default;;
+$code-font-size-mobile: 0.9rem !default;;
 $code-line-height: 1.7 !default;
 $code-padding-y: 1em !default;
 $code-padding-x: 1.3em !default;
